# resume_project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  deployment.yaml  frontend.Dockerfile  nginx.conf  out.txt  package-lock.json  package.json  server.Dockerfile  service.yaml
.github/workflows/: PULL_REQUEST_TEMPLATE.md  changelog-release.yml  changelog-update.yml  deploy-backend.yml  deploy-frontend.yml  deploy.yml  pull_request.yml
backend/: .flake8  pyproject.toml  pytest.ini  requirements.txt
backend/app/: html_parser.py  model.py  server.py
frontend/: .gitignore  package.json
frontend/.husky/: pre-commit
frontend/public/: index.html  pdf.worker.min.js
frontend/src/: App.js  Chatbot.jsx  GlobalStyles.js  theme.js
